--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <header class="header box">
                 <div class="header__left">
                     <div class="header__photo">
-                        <img class="header__photo-img" src="assets/img/profile.jpg" alt="Iury Gomes de Oliveira">
+                        <img class="header__photo-img" src="assets/img/profile.png" alt="Iury Gomes de Oliveira">
                     </div>
                     <div class="header__base-info">
                         <h4 class="title titl--h4">Alice Alves</h4>
@@ -58,7 +58,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://twitter.com/maniullp">
+                                <a href="https://twitter.com/">
                                     <i class="font-icon icon-twitter"></i>
                                 </a>
                             </li>
