--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta name="author" content="Alice Alves Cardoso de Brito" />
-    <meta name="description" content="Portifólio de trabalhos realizados e formação de Alice Alves Cardoso de Brito" />
+    <meta name="author" content="Alice Alves" />
+    <meta name="description" content="Portifólio de trabalhos realizados e formação de Alice Alves" />
     <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="assets/styles/style.css" />
     <link rel="stylesheet" type="text/css" href="assets/styles/style-dark.css" />
@@ -43,7 +43,7 @@
                         <div class="status">Aprendiz de Desenvolvedor WEB</div>
                         <ul class="header__social">
                             <li>
-                                <a href="https://www.linkedin.com/in/alice-alves-46b063176/">
+                                <a href="https://www.linkedin.com/">
                                     <i class="font-icon icon-linkedin"></i>
                                 </a>
                             </li>
@@ -53,7 +53,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.youtube.com/channel/UCBD4Z1HS6KD4pUconR_nIcQ?view_as=subscriber">
+                                <a href="https://www.youtube.com/">
                                     <i class="font-icon icon-youtube"></i>
                                 </a>
                             </li>
